<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_profile"
        tools:context=".ProfileActivity">

    <ImageView
            android:layout_width="264dp"
            android:layout_height="264dp" app:srcCompat="@drawable/pp"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent" android:cropToPadding="false"
            app:layout_constraintHorizontal_bias="0.494"
            android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="24sp"
            android:textStyle="bold" android:textColor="@android:color/black"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
    />
    <android.support.constraint.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorPrimary"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/name">
        <TextView
                android:text="@string/track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/track"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
                android:textColor="@android:color/white" android:textSize="18sp" android:layout_marginStart="32dp"/>
        <TextView
                android:text="@string/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/country"
                android:textColor="@android:color/white" android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/track" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/track"/>
        <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/email"
                android:textColor="@android:color/white" android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/country" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/country"/>
        <TextView
                android:text="@string/slack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/slack"
                android:textColor="@android:color/white" android:textSize="18sp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/phone"
                app:layout_constraintStart_toStartOf="@+id/phone"/>
        <TextView
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/phone"
                android:textColor="@android:color/white" android:textSize="18sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintStart_toStartOf="@+id/email"
        />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>