<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textStyle="bold" android:textColor="@android:color/black" android:layout_marginTop="176dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.496"
    />
    <Button
            android:text="@string/about_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn"
            android:id="@+id/aboutBtn"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:textSize="18sp" android:textAllCaps="false"
            android:textColor="@android:color/white" android:paddingStart="20dp"
            android:paddingEnd="20dp" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/profile_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn"
            android:id="@+id/profileBtn" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/aboutBtn"
            android:textSize="18sp" android:textAllCaps="false"
            android:textColor="@android:color/white" android:paddingStart="20dp" android:paddingEnd="20dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>